--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -7,11 +7,11 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/index/">Inicio</a></li>
-                <li><a href="/single/">Ingresa una queja</a></li>
+                <li class="active"><a href="{% url 'index' %}">Inicio</a></li>
+                <li><a href="{% url 'ingreso_queja' %}">Ingresa una queja</a></li>
                 <li><a href="/single/">Consulta de quejas</a></li>
-                <li><a href="/single/">Ingreso de usuario</a></li>
-                <li><a href="/contacto/">Contacto</a></li>
+                <li><a href="{% url 'login' %}">Ingreso de usuario</a></li>
+                {% if user.is_authenticated %}<li><a href="{% url 'logout' %}">Salida de usuario</a></li> {% endif %}
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Category <i class="fa fa-chevron-down"></i></a>
                     <div class="dropdown-menu" style="margin-left: -203.625px;">
                         <div class="dropdown-inner">
