- Se agrega funcionalidad de busqueda de quejas - Se agrega funcionalidad de visualizacion de acciones

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 	{% endblock %}
 	{% block hero %}
 	{% include "content/hero.html" %}
+	{% include 'content/mensajes.html' %}
 	{% endblock %}
 
 		</div>
