--- a/templates/ingreso_queja.html
+++ b/templates/ingreso_queja.html
@@ -23,18 +23,20 @@
 					<h2>Formulario de ingreso de Quejas</h2>
 					<hr class="line">
 				</div>
-				{% include "content/messages.html" %}
+				{% include "content/mensajes.html" %}
 				<div class="content">
 					<div class="col-sm-10 col-sm-offset-1">
 						<form id="ingreso_queja" class="wow fadeInUp" data-wow-delay=".1s" data-wow-duration="1s" action="" method="POST"> {% csrf_token %}
-							<table>
+							<table  width="100%">
+								<col style="width:20%">
+								<col style="width:80%">
 								{% for field in formulario %}
 								<div class="row">
 									<tr>
 										<!-- Name -->
 										<div class="col-md-4">
 											<div class="form-group">
-												<td style="text-align: right; padding-right: 2px;">{{field.label}}</td>
+												<td style="text-align: right; padding-right: 2px;">{{field.label}}&nbsp;</td>
 												<td>  {{field}}</td>
 											</div>
 										</div>
