--- a/templates/login_usuario.html
+++ b/templates/login_usuario.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class="content">
 					<div class="col-sm-10 col-sm-offset-1">
-						{% include "content/messages.html" %}
+						{% include "content/mensajes.html" %}
 						<p>
 						<form id="contact_form" class="wow fadeInUp" data-wow-delay=".1s" data-wow-duration="1s" action="" method="POST">
 							{% csrf_token %}
