-  Agregar hero a vistas

--- a/templates/consulta_quejas_filtro.html
+++ b/templates/consulta_quejas_filtro.html
@@ -7,7 +7,7 @@
 	{% include "menu/menu.html" %}
 	{% endblock %}
 	{% block hero %}
-	
+	{% include "content/hero.html" %}
 	{% endblock %}
 
 		</div>
