--- a/templates/lista_municipios.html
+++ b/templates/lista_municipios.html
@@ -6,7 +6,9 @@
 	{% block menu %}
 	{% include "menu/menu.html" %}
 	{% endblock %}
-
+	{% block hero %}
+	{% include "content/hero.html" %}
+	{% endblock %}
 		</div>
 	</header>
 	<!-- /Section: intro -->
