--- a/templates/login_usuario.html
+++ b/templates/login_usuario.html
@@ -6,6 +6,11 @@
 	{% block menu %}
 	{% include "menu/menu.html" %}
 	{% endblock %}
+	
+	{% block hero %}
+	{% include "content/hero.html" %}
+	{% endblock hero %}
+		
 
 		</div>
 	</header>
