- Componer Categories para vista de celular

--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -1,7 +1,7 @@
 
     <div class="container-fluid">
         <div class="navbar-header">
-          <span id="heading" class="visible-xs">Categories</span>
+          <span id="heading" class="visible-xs">Menu Principal</span>
           <button type="button" class="btn btn-navbar navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-bars"></i></button>
             
         </div>
