- Componer Texto de boton en login usuario

--- a/templates/login_usuario.html
+++ b/templates/login_usuario.html
@@ -37,7 +37,7 @@
 
 							<ul>
 								{{formulario.as_ul}}
-								<li><button type="submit" id="form-submit" class="btn btn-skin btn-block" id="submit_btn">Submit</button></li>
+								<li><button type="submit" id="form-submit" class="btn btn-skin btn-block" id="submit_btn">Ingresar</button></li>
 							</ul>
 							
 						</form>
