- Componer Links rotos en menu de usuario

--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -18,9 +18,9 @@
                         <div class="dropdown-inner">
                             <ul class="list-unstyled">
                                 <li><a href="/consulta_quejas/region/">Quejas por Region</a></li>
-                                <li><a href="/archive/departamento/">Quejas por Departamento</a></li>
-                                <li><a href="/archive/municipio/">Quejas por Municipio</a></li>
-                                <li><a href="/archive/comercio/">Quejas por Comercio</a></li>
+                                <li><a href="/consulta_quejas/departamento/">Quejas por Departamento</a></li>
+                                <li><a href="/consulta_quejas/municipio/">Quejas por Municipio</a></li>
+                                <li><a href="/consulta_quejas/comercio/">Quejas por Comercio</a></li>
                             </ul>
                         </div>
                     </div>
